hphp/hack/test/typecheck/instanceof/instanceof_means_object.php.exp
File "instanceof_means_object.php", line 6, characters 18-19:
Invalid argument (Typing[4110])
File "instanceof_means_object.php", line 10, characters 23-28:
This is a string
File "instanceof_means_object.php", line 5, characters 7-8:
It is incompatible with an object
