hphp/hack/test/typecheck/instanceof/instanceof_means_object.php
<?hh

function f($x) {
  $name = g();
  if ($x instanceof $name) {
    takes_string($x);
  }
}

function takes_string(string $arg): void {}
